added agent status infos to info api
